Add database config

--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,5 @@
 !.gitignore
 !.editorconfig
 !.htaccess
-application/config/database.php
+# application/config/database.php
 application/config/config.php
