--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@
 !.gitignore
 !.editorconfig
 !.htaccess
-#application/config/database.php
-#application/config/config.php
-application/img/uploads/*
-
+application/img/uploads/*.png
+application/img/uploads/*.gif
+application/img/uploads/*.jpg
